--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -6,137 +6,137 @@
 
 <MudForm @onsubmit="Save">
     <MudGrid>
-     
+
         <MudItem xs=12 lg="9">
 
+            <MudStack Spacing="5">
+                <SettingsField Label="@AppLocalization["Server"]">
 
-            <SettingsField Label="@AppLocalization["Server"]">
+
+                    @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
+                    {
+
+                        <MudTextField Label="@AppLocalization["Server"]"
+                                      AutoFocus=true
+                                      HelperText="Can be your domain name in most environments"
+                                      Value=@("Private")
+                                      Disabled />
+                    }
+                    else
+                    {
+
+                        <MudTextField Label="@AppLocalization["Server"]"
+                                      HelperText="Can be your domain name in most environments"
+                                      For="(()=>settings.ServerAddress)"
+                                      @bind-Value="@(settings.ServerAddress)">
 
 
-                @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
-                {
 
-                    <MudTextField Label="@AppLocalization["Server"]"
-                                  AutoFocus=true
-                                  HelperText="Can be your domain name in most environments"
-                                  Value=@("Private")
-                                  Disabled />
-                }
-                else
-                {
+                        </MudTextField>
 
-                    <MudTextField Label="@AppLocalization["Server"]"
-                                  HelperText="Can be your domain name in most environments"
-                                  For="(()=>settings.ServerAddress)"
-                                  @bind-Value="@(settings.ServerAddress)">
+                    }
+
+                </SettingsField>
+                <SettingsField Label="@AppLocalization["Port"]">
+
+                    @{
+                        string helperText = "The default port of 389 is the recommended port to use.";
+                    }
+
+                    @*
+                    TODO Add this as a popover
+                    <MudTooltip Display="Display.InlineBlock" Multiline Style="max-width:300px" Text="The application will automatically use an SSL
+                    connection if the server's CA Certificate is a trusted CA on this web server. Using port 636 can work,
+                    but may lead to unexpected behaviour of other services that listen to Active Directory changes.">
+                    <MudIcon Icon="IconName.QuestionCircle" Color="Color.Info" />
+                    </MudTooltip>*@
+
+                    @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
+                    {
+                        <MudNumericField HelperText="@helperText"
+                                         Label="@AppLocalization["Port"]"
+                                         HideSpinButtons="true"
+                                         Value="0"
+                                         Disabled />
+
+
+                    }
+                    else
+                    {
+
+                        <MudNumericField HelperText="@helperText"
+                                         Label="@AppLocalization["Port"]"
+                                         HideSpinButtons="true"
+                                         For="(()=>settings.ServerPort)"
+                                         @bind-Value="@settings.ServerPort" />
+
+
+
+
+                    }
+
+
+
+
+
+                </SettingsField>
+
+
+
+                <SettingsField Label="@AppLocalization["Username"]">
+
+
+                    <MudTextField For="(()=>settings.Username)" Label="@AppLocalization["Username"]" name="username" @bind-Value="@settings.Username">
 
 
 
                     </MudTextField>
 
-                }
-
-            </SettingsField>
-            <SettingsField Label="@AppLocalization["Port"]">
-
-                @{
-                    string helperText = "The default port of 389 is the recommended port to use.";
-                }
-
-                @*
-                TODO Add this as a popover
-                <MudTooltip Display="Display.InlineBlock" Multiline Style="max-width:300px" Text="The application will automatically use an SSL
-                connection if the server's CA Certificate is a trusted CA on this web server. Using port 636 can work,
-                but may lead to unexpected behaviour of other services that listen to Active Directory changes.">
-                <MudIcon Icon="IconName.QuestionCircle" Color="Color.Info" />
-                </MudTooltip>*@
-
-                @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
-                {
-                    <MudNumericField HelperText="@helperText"
-                                     Label="@AppLocalization["Port"]"
-                                     HideSpinButtons="true"
-                                     Value="0"
-                                     Disabled />
-
-
-                }
-                else
-                {
-
-                    <MudNumericField HelperText="@helperText"
-                                     Label="@AppLocalization["Port"]"
-                                     HideSpinButtons="true"
-                                     For="(()=>settings.ServerPort)"
-                                     @bind-Value="@settings.ServerPort" />
+                </SettingsField>
 
 
 
+                <SettingsField Label="@AppLocalization["Password"]">
 
-                }
-
-
-
-
-
-            </SettingsField>
+                    <MudTextField For="(()=>settings.Password)" Label="@AppLocalization["Password"]" name="password" InputType="InputType.Password" @bind-Value="@settings.Password">
 
 
 
-            <SettingsField Label="@AppLocalization["Username"]">
+                    </MudTextField>
 
-
-                <MudTextField For="(()=>settings.Username)" Label="@AppLocalization["Username"]" name="username" @bind-Value="@settings.Username">
-
-
-
-                </MudTextField>
-
-            </SettingsField>
+                </SettingsField>
 
 
 
-            <SettingsField Label="@AppLocalization["Password"]">
+                <SettingsField Label="@AppLocalization["UseTLS"]">
 
-                <MudTextField For="(()=>settings.Password)" Label="@AppLocalization["Password"]" name="password" InputType="InputType.Password" @bind-Value="@settings.Password">
+                    <MudSwitch For="(()=>settings.UseTLS)" Label="@AppLocalization["UseTLS"]" @bind-Value="@settings.UseTLS" />
 
-
-
-                </MudTextField>
-
-            </SettingsField>
+                </SettingsField>
 
 
 
-            <SettingsField Label="@AppLocalization["UseTLS"]">
+                <SettingsField Label="@AppLocalization["FQDN"]">
 
-                <MudSwitch For="(()=>settings.UseTLS)" Label="@AppLocalization["UseTLS"]" @bind-Value="@settings.UseTLS" />
+                    <MudTextField For="(()=>settings.FQDN)" Label="@AppLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
 
-            </SettingsField>
-
-
-
-            <SettingsField Label="@AppLocalization["FQDN"]">
-
-                <MudTextField For="(()=>settings.FQDN)" Label="@AppLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
-
-            </SettingsField>
+                </SettingsField>
 
 
 
-            <SettingsField Label="@AppLocalization["Base DN"]">
+                <SettingsField Label="@AppLocalization["Base DN"]">
 
-                <MudTextField For="(()=>settings.ApplicationBaseDN)" Label="@AppLocalization["Base DN"]" name="baseDN" @bind-Value="@settings.ApplicationBaseDN" />
+                    <MudTextField For="(()=>settings.ApplicationBaseDN)" Label="@AppLocalization["Base DN"]" name="baseDN" @bind-Value="@settings.ApplicationBaseDN" />
 
-            </SettingsField>
+                </SettingsField>
 
 
-            <SettingsField>
+                <SettingsField>
 
-                <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
+                    <MudButton Disabled="SaveDisabled" ButtonType="ButtonType.Submit" Color="Color.Success">Save Changes</MudButton>
 
-            </SettingsField>
-
+                </SettingsField>
+            </MudStack>
         </MudItem>
         @if (ShowStatusPanel)
         {
