Add Locked Out Alert Message in view pages

--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -60,7 +60,14 @@
                                         <DynamicMudInput T=string Label="@AppLocalization["Name"]" @bind-Value="@Computer.CanonicalName" Disabled=@(!EditMode) />
                                         <DynamicMudInput T=string Label="@AppLocalization["Operating System"]" @bind-Value="@Computer.OperatingSystem" Disabled=@true />
                                         <DynamicMudInput T=bool Label="@AppLocalization["Online"]" Value="@(Computer.IsOnline==true)" Disabled=@true />
-
+                                        @if (Computer.Disabled)
+                                        {
+                                            <MudAlert Severity="Severity.Error" Class="mud-width-full">@AppLocalization["Computer is disabled"]</MudAlert>
+                                        }
+                                        @if (Computer.LockedOut)
+                                        {
+                                            <MudAlert Severity="Severity.Warning" Class="mud-width-full">@AppLocalization["Computer is locked out"]</MudAlert>
+                                        }
                                     </MudStack>
 
                                 </Section>
